# ds_agent

./: .env.example  .gitignore  chainlit.md  main.py  pyproject.toml  requirements.txt  test_chainlit.py
.chainlit/: config.toml
.chainlit/translations/: en-US.json
public/: style.css
src/: app.py  main.py
src/ds_agent/: config.py
src/ds_agent/core/: agent.py  graph.py  llm.py  prompts.py  state.py
src/ds_agent/core/nodes/: reporter.py  supervisor.py  tools.py  worker.py
src/ds_agent/tools/: e2b.py
src/ds_agent/utils/: helpers.py  logger.py  notebook.py
