[project]
name = "ds-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chainlit>=2.9.6",
    "e2b-code-interpreter>=2.4.1",
    "langchain-core>=1.2.12",
    "langchain-nvidia-ai-endpoints>=1.0.4",
    "langchain-openai>=1.1.9",
    "langgraph>=1.0.8",
    "nbformat>=5.10.4",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "sniffio>=1.3.1",
]
